CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT("Teach Yourself C & CPP")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

SET(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/lib/platforms/any
    ${CMAKE_SOURCE_DIR}/lib/platforms/win)
#include sub-projects
ADD_SUBDIRECTORY("src")

